--- a/package.json
+++ b/package.json
@@ -281,6 +281,7 @@
     "react-big-calendar": "0.19.2",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
