Add general layout fixes

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hospital-helper",
-  "productName": "Hospital Helper",
+  "name": "hospital-chat",
+  "productName": "Hospital Chat",
   "version": "1.0.0",
-  "description": "Um programinha para marcar consultas usando electron + react",
+  "description": "Um programinha para conversar com colegas de trabalho usando electron + react",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
     "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
