--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
+    "file-saver": "^2.0.0",
     "history": "^4.7.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
